--- a/index.html
+++ b/index.html
@@ -556,11 +556,11 @@
               <div class="col-lg-3 col-md-6 footer-contact">
                 <h4>Contact Us</h4>
                 <p>
-                  A108 Adam Street <br>
-                  New York, NY 535022<br>
-                  United States <br><br>
-                  <strong>Phone:</strong> +1 5589 55488 55<br>
-                  <strong>Email:</strong> info@example.com<br>
+                  <p>Auf der Hüls <br>
+                    52080, Aachen<br>
+                  Germany <br><br>
+                  <strong>Phone:</strong> +49 177 590 317 8<br>
+                  <strong>Email:</strong> mhitecinfo@gmail.com<br>
                 </p>
 
               </div>
