--- a/privacy.html
+++ b/privacy.html
@@ -22,6 +22,6 @@
     <p>MHI Technologies reserves the right to update or change this Privacy Policy at any time. Any changes will be reflected on this page.</p>
     
     <h2>Contact Us</h2>
-    <p>If you have any questions or concerns about this Privacy Policy, please contact us at privacy@mhi-technologies.com.</p>
+    <p>If you have any questions or concerns about this Privacy Policy, please contact us at mhitecinfo@gmail.com</p>
 </body>
 </html>
